made few changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="header">
       <p>calc</p>
-      <div>
+      <div class="theme">
         <span>THEME</span>
         <div class="themeSwitcher">
           <div class="topNumbers">
