--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <span class="">3</span>
           </div>
           <div class="theme-switcher-buttons">
-            <button id="btn1"></button>
-            <button id="btn2"></button>
-            <button id="btn3"></button>
+            <span id="btn1"></span>
+            <span id="btn2"></span>
+            <span id="btn3"></span>
           </div>
         </div>
       </div>
