--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <span>THEME</span>
         <div class="themeSwitcher">
           <div class="topNumbers">
-            <span class="">1</span>
-            <span class="">2</span>
-            <span class="">3</span>
+            <span >1</span>
+            <span >2</span>
+            <span >3</span>
           </div>
           <div class="theme-switcher-buttons">
-            <span id="btn1"></span>
-            <span id="btn2"></span>
-            <span id="btn3"></span>
-          </div>
+           <div id="btn1" class="btn"></div>
+            <div id="btn2" class="btn"></div>
+            <div id="btn3" class="btn"></div>
+           </div>  
         </div>
       </div>
     </div>
