--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <span class="">3</span>
           </div>
           <div class="theme-switcher-buttons">
-            <span id="btn1"></span>
-            <span id="btn2"></span>
-            <span id="btn3"></span>
+            <div id="btn1"></div>
+            <div id="btn2"></div>
+            <div id="btn3"></div>
           </div>
         </div>
       </div>
@@ -34,24 +34,24 @@
     </div>
     <div class="calculation-input-keys">
        <div class="calculationButtons">
-        <button class="nuumbers seven">7</button>
-        <button class="nuumbers eight">8</button>
-        <button class="nuumbers nine">9</button>
+        <button class="numbers seven">7</button>
+        <button class="numbers eight">8</button>
+        <button class="numbers nine">9</button>
         <button class="functions del">DEL</button>
-        <button class="nuumbers four">4</button>
-        <button class="nuumbers five">5</button>
-        <button class="nuumbers six">6</button>
+        <button class="numbers four">4</button>
+        <button class="numbers five">5</button>
+        <button class="numbers six">6</button>
         <button class="operators plus">+</button>
-        <button class="nuumbers one">1</button>
-        <button class="nuumbers two">2</button>
-        <button class="nuumbers three">3</button>
+        <button class="numbers one">1</button>
+        <button class="numbers two">2</button>
+        <button class="numbers three">3</button>
         <button class="operators minus">-</button>
         <button class="decimal-point">.</button>
-        <button class="nuumbers zero">0</button>
+        <button class="numbers zero">0</button>
         <button class="operators divide">/</button>
-        <button class="nuumbers times">&times;</button>
-        <button class="reset" type="reset">RESET</button>
-        <button class="submit" type="submit">=</button>
+        <button class="numbers times">&times;</button>
+        <button class="functions reset" type="reset">RESET</button>
+        <button class="functions submit" type="submit">=</button>
        </div>
     </div>
   </div>
