made some changes, finished theme 1

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
             <span >3</span>
           </div>
           <div class="theme-switcher-buttons">
-
-         <div id="btn1" class="btn"></div>
-            <div id="btn2" class="btn"></div>
-            <div id="btn3" class="btn"></div>
-           </div>  
+            <div id="btn1" class="btn btn1"></div>
+            <div id="btn2" class="btn btn2"></div>
+            <div id="btn3" class="btn btn3"></div>
+          </div>  
          </div>
       </div>
     </div>
