--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="generalStyles.css">
-  <link id="themes" rel="stylesheet" href="themeThreeStyle.css">
+  <link id="themes" rel="stylesheet" href="themeOneStyle.css">
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body>
