linked js file to  html file

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="">Ayo_Mich</a>.
   </div>
+  <script src="./script.js"></script>
 </body>
 </html>
