--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+OCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="result-board">
-        <h1 id="displayText">399,981</h1>
+        <h1 id="displayText" placeholder="0"></h1>
     </div>
     <div class="calculation-input-keys">
        <div class="calculationButtons">
