--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
     </div>
     <div class="calculation-input-keys">
        <div class="calculationButtons">
-        <button onclick="keys(seven)"  class="numbers seven">7</button>
-        <button onclick="keys(eight)" class="numbers eight">8</button>
-        <button onclick="keys(nine)" class="numbers nine">9</button>
+        <button onclick="keys('seven')"  class="numbers seven">7</button>
+        <button onclick="keys('eight')" class="numbers eight">8</button>
+        <button onclick="keys('nine')" class="numbers nine">9</button>
         <button onclick="del()" class="functions del">DEL</button>
-        <button onclick="keys(four)" class="numbers four">4</button>
-        <button onclick="keys(five)" class="numbers five">5</button>
-        <button onclick="keys(six)" class="numbers six">6</button>
-        <button onclick="keys(plus)" class="operators plus">+</button>
-        <button onclick="keys(one)" class="numbers one">1</button>
-        <button onclick="keys(two)" class="numbers two">2</button>
-        <button onclick="keys(three)" class="numbers three">3</button>
-        <button onclick="keys(minus)" class="operators minus">-</button>
-        <button onclick="keys(decimalPoint)" class="decimal-point">.</button>
-        <button onclick="keys(zero)" class="numbers zero">0</button>
-        <button onclick="keys(divide)" class="operators divide">/</button>
-        <button onclick="keys(times)" class="numbers times">&times;</button>
+        <button onclick="keys('four')" class="numbers four">4</button>
+        <button onclick="keys('five')" class="numbers five">5</button>
+        <button onclick="keys('six')" class="numbers six">6</button>
+        <button onclick="keys('plus')" class="operators plus">+</button>
+        <button onclick="keys('one')" class="numbers one">1</button>
+        <button onclick="keys('two')" class="numbers two">2</button>
+        <button onclick="keys('three')" class="numbers three">3</button>
+        <button onclick="keys('minus')" class="operators minus">-</button>
+        <button onclick="keys('decimalPoint')" class="decimal-point">.</button>
+        <button onclick="keys('zero')" class="numbers zero">0</button>
+        <button onclick="keys('divide')" class="operators divide">/</button>
+        <button onclick="keys('times')" class="numbers times">&times;</button>
         <button class="functions reset" onclick="reset()">RESET</button>
         <button class="functions submit" onclick="calculate()">=</button>
        </div>
