working on calculator this morning

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button onclick="keys('zero')" class="numbers zero">0</button>
         <button onclick="keys('divide')" class="operators divide">/</button>
         <button onclick="keys('times')" class="numbers times">&times;</button>
-        <button class="functions reset" onclick="reset()">RESET</button>
+        <button class="functions reset" >RESET</button>
         <button class="functions submit" onclick="calculate()">=</button>
        </div>
     </div>
