--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <button onclick="keys('divide')" class="operators divide">/</button>
         <button onclick="keys('times')" class="numbers times">&times;</button>
         <button class="functions reset" >RESET</button>
-        <button class="functions submit" onclick="calculate()">=</button>
+        <button class="functions submit equals">=</button>
        </div>
     </div>
   </div>
