touched on calculator today

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button onclick="keys('zero')" class="numbers zero">0</button>
         <button onclick="keys('divide')" class="operators divide">/</button>
         <button onclick="keys('times')" class="numbers times">&times;</button>
-        <button class="functions reset" >RESET</button>
+        <button class="functions reset" onclick="reset()">RESET</button>
         <button class="functions submit equals">=</button>
        </div>
     </div>
@@ -60,6 +60,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="">Ayo_Mich</a>.
   </div>
-  <script src="./script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
