--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button onclick="keys('seven')"  class="numbers seven">7</button>
         <button onclick="keys('eight')" class="numbers eight">8</button>
         <button onclick="keys('nine')" class="numbers nine">9</button>
-        <button class="functions del">DEL</button>
+        <button class="functions del" onclick="del()">DEL</button>
         <button onclick="keys('four')" class="numbers four">4</button>
         <button onclick="keys('five')" class="numbers five">5</button>
         <button onclick="keys('six')" class="numbers six">6</button>
