--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/michojekunle">AMD</a>.
+    Coded by <a href="https://github.com/michojekunle" target="_blank">AMD</a>.
   </div>
   <script src="/script.js"></script>
 </body>
